docs/style.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 50px 0 0 0;
  font: 16px/1.4 Helvetica, Arial, sans-serif;
}

.line {
  fill: none;
  stroke-width: 1.5px;
}

.tick line {
  shape-rendering: crispEdges;
}

.grid line {
  stroke: #eee;
  shape-rendering: crispEdges;
}

.linechart.tip {
  position: absolute;
  width: 200px;
  height: 100px;
  background: rgb(34, 39, 42);
  color: white;
  padding: 10px;
  border-radius: 2px;
  z-index: 100;
  pointer-events: none;
  font-size: .8em;
}

.linechart.tip:after {
  top: 100%;
  left: 50%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.linechart.tip:after {
  border-color: rgba(0,0,0,0);
  border-top-color: rgb(34, 39, 42);
  border-width: 5px;
  margin-left: -5px;
}

